--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <ul id="menuItems">
                         <li><a href="index.html">Anasayfa</a></li>
                         <li><a href="products.html">Ürünler</a></li>
-                        <li><a href="">Hakkımızda</a></li>
+                        <li><a href="about_us.html">Hakkımızda</a></li>
                         <li><a href="">İletişim</a></li>
                         <li><a href="account.html">Hesap</a></li>
                     </ul>
@@ -179,6 +179,7 @@
                     menuItems.style.maxHeight = "0px";
                 }
             }
+            
         </script>
     </body>    
 </html>
