--- a/products.html
+++ b/products.html
@@ -19,7 +19,7 @@
                     <ul id="menuItems">
                         <li><a href="index.html">Anasayfa</a></li>
                         <li><a href="products.html">Ürünler</a></li>
-                        <li><a href="">Hakkımızda</a></li>
+                        <li><a href="about_us.html">Hakkımızda</a></li>
                         <li><a href="">İletişim</a></li>
                         <li><a href="account.html">Hesap</a></li>
                     </ul>
