New product pages added.

--- a/products.html
+++ b/products.html
@@ -108,9 +108,9 @@
         </div>
         <div class="page-btn">
             <span>1</span>
-            <span>2</span>
-            <span>3</span>
-            <span>&#8594</span>
+            <a href="products2.html"> <span>2</span> </a>
+            <a href="products3.html"> <span>3</span> </a>
+            <a href="products2.html"> <span>&#8594</span> </a>
         </div>
     </div>
     <div class="footer">
